avformat/cache: Support user specified read-ahead for non seekable media

Fixes Ticket2406

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>